--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -6,6 +6,11 @@ pipeline {
                         sh """mvn -version"""
                     }
         }
+        stage('Checkout') {
+          steps {
+            checkout([$class: 'GitSCM', branches: [[name: '*/master']], userRemoteConfigs: [[url: 'https://github.com/votre-utilisateur/votre-repo.git']]])
+          }
+        }
         stage('Afficher la date système') {
               steps {
                 sh 'date'
