--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage('Checkout') {
           steps {
-            checkout([$class: 'GitSCM', branches: [[name: '*/master']], userRemoteConfigs: [[url: 'https://github.com/votre-utilisateur/votre-repo.git']]])
+            checkout([$class: 'GitSCM', branches: [[name: '*/main']], userRemoteConfigs: [[url: 'https://github.com/Oumayma-Bah/tp_esprit.git']]])
           }
         }
         stage('Afficher la date système') {
