--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -21,7 +21,9 @@ pipeline {
         }
         stage('MVN CLEAN') {
                     steps {
+                    dir('avec-maven'){
                         sh 'mvn clean'
+                        }
                     }
         }
         stage('MVN COMPILE') {
