--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -37,7 +37,11 @@ pipeline {
                  steps {
                     dir('avec-maven'){
                         withSonarQubeEnv('SonarQube') {
-                            sh 'mvn sonar:sonar'
+                            withCredentials([usernamePassword(credentialsId: 'sonar-cred', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+                                withSonarQubeEnv('SonarQube') {
+                                    sh 'mvn sonar:sonar -Dsonar.login=${env.USERNAME} -Dsonar.password=${env.PASSWORD}'
+                                }
+                            }
                         }
                     }
                  }
