--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -36,10 +36,10 @@ pipeline {
         stage('MVN SONARQUBE') {
                  steps {
                     dir('avec-maven'){
-                        withSonarQubeEnv('SonarQube') {
+                        script {
                             withCredentials([usernamePassword(credentialsId: 'sonar-cred', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
                                 withSonarQubeEnv('SonarQube') {
-                                    sh 'mvn sonar:sonar -Dsonar.login=${env.USERNAME} -Dsonar.password=${env.PASSWORD}'
+                                    sh "mvn sonar:sonar -Dsonar.login=${env.USERNAME} -Dsonar.password=${env.PASSWORD}"
                                 }
                             }
                         }
