--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
                  steps {
                     dir('avec-maven'){
                         script {
-                            withCredentials([usernamePassword(credentialsId: 'sonar-cred', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+                            withCredentials([usernamePassword(credentialsId: '4b2d9ca2-2d87-41be-b9ec-7681caea0426', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
                                 withSonarQubeEnv('SonarQube') {
                                     sh "mvn sonar:sonar -Dsonar.login=${env.USERNAME} -Dsonar.password=${env.PASSWORD}"
                                 }
