--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
                         script {
                             withCredentials([usernamePassword(credentialsId: '4b2d9ca2-2d87-41be-b9ec-7681caea0426', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
                                 withSonarQubeEnv('SonarQube') {
-                                    sh "mvn sonar:sonar -Dsonar.login=${env.USERNAME} -Dsonar.password=${env.PASSWORD}"
+                                    sh 'mvn sonar:sonar -Dsonar.login=${env.USERNAME} -Dsonar.password=${env.PASSWORD}'
                                 }
                             }
                         }
