--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -34,18 +34,17 @@ pipeline {
                     }
         }
         stage('MVN SONARQUBE') {
-            environment {
-                SONAR_LOGIN = credentials('4b2d9ca2-2d87-41be-b9ec-7681caea0426')
-            }
             steps {
                 script {
-                    withSonarQubeEnv('SonarQube') {
-                        sh "mvn sonar:sonar -Dsonar.login=${env.SONAR_LOGIN}"
+                    withCredentials([usernamePassword(credentialsId: '4b2d9ca2-2d87-41be-b9ec-7681caea0426', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+                        withSonarQubeEnv('SonarQube') {
+                            sh "mvn sonar:sonar -Dsonar.login=$USERNAME -Dsonar.password=$PASSWORD"
+                        }
                     }
                 }
             }
-                
         }
+
 
     }
 }
