--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -35,10 +35,12 @@ pipeline {
         }
         stage('MVN SONARQUBE') {
             steps {
-                script {
-                    withCredentials([usernamePassword(credentialsId: '4b2d9ca2-2d87-41be-b9ec-7681caea0426', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
-                        withSonarQubeEnv('SonarQube') {
-                            sh "mvn sonar:sonar"
+                dir('avec-maven'){
+                    script {
+                        withCredentials([usernamePassword(credentialsId: '4b2d9ca2-2d87-41be-b9ec-7681caea0426', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+                            withSonarQubeEnv('SonarQube') {
+                                sh "mvn sonar:sonar"
+                            }
                         }
                     }
                 }
