--- a/avec-maven/Jenkinsfile
+++ b/avec-maven/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
                   withCredentials([usernamePassword(credentialsId: '4b2d9ca2-2d87-41be-b9ec-7681caea0426', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
                       withSonarQubeEnv('SonarQube') {
                         env.MAVEN_OPTS = "-Duser.home=${env.WORKSPACE}/.m2 -Dmaven.repo.local=${env.WORKSPACE}/.m2/repository"
-                        sh "cd avec-maven/ && mvn sonar:sonar -Dsonar.login=$USERNAME -Dsonar.password=$PASSWORD"
+                        sh "cd avec-maven && mvn sonar:sonar -Dsonar.login=$USERNAME -Dsonar.password=$PASSWORD"
                             
                         }
                       
